[package]
name = "podtender"
version = "0.3.0"
edition = "2021"
authors = ["Julian Schindel <mail@arctic-alpaca.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PEASEC/podtender"
description = """
A rust client for the podman API.
"""
categories = ["api-bindings"]
keywords = ["podman", "containers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "podtender"

# Tests are listed as targets to allow for the `examples` features. Otherwise, the feature wouldn't be enabled in
# integration tests. https://github.com/rust-lang/cargo/issues/2911
[[test]]
path = "tests/containers.rs"
name = "containers-test"
required-features = ["examples", "tracing"]

[[test]]
path = "tests/images.rs"
name = "images-test"
required-features = ["examples", "tracing"]

[[test]]
path = "tests/networks.rs"
name = "networks-test"
required-features = ["examples", "tracing"]

[[test]]
path = "tests/pod_prune.rs"
name = "pod_prune-test"
required-features = ["examples", "tracing"]

[[test]]
path = "tests/pods.rs"
name = "pods-test"
required-features = ["examples", "tracing"]

[[test]]
path = "tests/system.rs"
name = "system-test"
required-features = ["examples", "tracing"]

[[test]]
path = "tests/volumes.rs"
name = "volumes-test"
required-features = ["examples", "tracing"]

[features]
# Builder pattern for request parameter
builder = ["dep:derive_builder"]
# Examples for request parameter via ExampleValues trait
examples = []
# Tracing support
tracing = ["dep:tracing"]

[dependencies]
asynchronous-codec = { version="0.6.0", features = ["json"]}
derive_builder = { version="0.11.2", optional = true}
futures = "0.3.21"
hyper = { version = "0.14.18", features = ["server", "client", "http1", "runtime", "stream"] }
hyperlocal = { version = "0.8.0", features = ["client"]}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_path_to_error = "0.1.7"
serde_qs = "0.10.1"
serde_with = {version = "2.0.0", features = ["json", "macros"]}
tracing = {version  ="0.1.34", optional = true}
thiserror = "1.0.31"

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "0.9.0"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "net", "macros", "io-std", "io-util"] }
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "registry"]}
